--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
-DB_USERNAME=<<db_username>>
-DB_PASSWORD=<<db_password>>
-DB_DATABASE=<<db_database>>
+PORT=8080
+DB_USERNAME=medium_clone_app
+DB_PASSWORD=the_medium_clone_app_user_password
+DB_DATABASE=medium_clone
 DB_HOST=localhost
+SESSION_SECRET=95aa672f-ba09-4186-ab9b-e9228307bf10
