--- a/.sequelizerc
+++ b/.sequelizerc
@@ -5,9 +5,9 @@ module.exports = {
   'models-path': path.resolve('db', 'models'),
   'seeders-path': path.resolve('db', 'seeders'),
   'migrations-path': path.resolve('db', 'migrations')
-},
-  production: {
-    use_env_variable: 'DATABASE_URL',
-    dialect: 'postgres',
-    seederStorage: 'sequelize',
-  }
+};
+  // production: {
+  //   use_env_variable: 'DATABASE_URL',
+  //   dialect: 'postgres',
+  //   seederStorage: 'sequelize',
+  // }
